2003-04-12  Martin Blom  <martin@blom.org>

	* Released ahi.device 5.32.

	* ahi.deivce: io_Actual is now valid even if a CMD_READ or
	CMD_WRITE request failed or was aborted. [Grzegorz Kraszewski]

	* ahi.doc: Don't mention io_Actual for CMD_STOP/CMD_START.

	* ahi.device: gw_IndexToFrequency in the MorphOS version now uses
	d0/a1 for arguments instead of the stack. [Patch from Harry
	Sintonen]

	* Released paula.audio 4.29.

	* paula.audio: Small cleanup here and there. [Patch from Harry
	Sintonen]

	* paula.audio: Library cleanup didn't free resources at
	failure. Fixed. [Patch from Harry Sintonen]

	* paula.audio: DMA playback did CloseDevice with a0 =
	p_TimerReq. Fixed. [Patch from Harry Sintonen]

	* ahi.device: Added new MOSSYS patches (MorphOS only) from Harry
	Sintonen.

2003-01-24  Martin Blom  <martin@blom.org>

	* ahiusr.texinfo: Updated the Acknowledgments chapter. Added
	Donors and Honourable mention sections. Updated my
	address. Updated the list of supported sound cards.

2003-01-23  Martin Blom  <martin@blom.org>

	* Limit lha compression method to lh6.

	* Now builds AHI-Handler for ppc-morphos too.

2003-01-22  Martin Blom  <martin@blom.org>

	* Docs: Now builds AutoDocs for ahi.device and drivers.

	* Released AHI-Handler 5.1.

	* Drivers: source code for a couple of drivers now included in
	bindist (ahidev.lha).

	* Examples: source code now included in bindist (ahidev.lha).

2003-01-20  Martin Blom  <martin@blom.org>

	* AHI-Handler: Now part of build tree, ported to gcc (m68k only!),
	GPL:ed and will no longer accept 24 bit AIFF/AIFC files (which AHI
	cannot play -- but 32 bit files are still accepted).

2003-01-19  Martin Blom  <martin@blom.org>

	* Released ahi.device 5.31. This is actually all I had in mind for
	V6 (except for a proper distribution with installation scripts
	etc, which I don't feel like doing anymore), so unless somebody
	complains, I'll bump the version to 6.0 and branch the source
	tree. Speak now or forever hold ...
